--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39bb337c",
+   "id": "ad3b4ba3",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "362077d6",
+   "id": "7011e329",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ed699c7a",
+   "id": "5d4b933f",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b1f1a38e",
+   "id": "7f4138a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18cb181f",
+   "id": "d5eca49b",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "883b7ca0",
+   "id": "c387cf87",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42e44f6",
+   "id": "aaf1d273",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ef24a734",
+   "id": "d596826f",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3561a1ec",
+   "id": "460302c0",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95fca26a",
+   "id": "8b55bc40",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "29cb058f",
+   "id": "dcbb5fc3",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d0872431",
+   "id": "5b36d387",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f2592203",
+   "id": "a448ab4c",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ec34d056",
+   "id": "4bc46f06",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a0091a0a",
+   "id": "33f47997",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb72c4ab",
+   "id": "24b5bbaf",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ff4cac8f",
+   "id": "90cf2fa1",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "46925b57",
+   "id": "c9612a63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a05a30b3",
+   "id": "65652945",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9c4d6ac0",
+   "id": "549196d7",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a82c29eb",
+   "id": "16c65a65",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8df86dad",
+   "id": "068319f2",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "df4c0a1f",
+   "id": "ac1d498f",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5659b4a8",
+   "id": "5c931a20",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "63bc8976",
+   "id": "97807016",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "67af3013",
+   "id": "bb223fab",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2e0e731b",
+   "id": "c5168bdb",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fadb194",
+   "id": "c1b4ce2f",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "fee36b21",
+   "id": "dc0421bc",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d00e8f6e",
+   "id": "9de16b7a",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "14eb006e",
+   "id": "5eeca321",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1447804c",
+   "id": "d3b42ae2",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "6283af21",
+   "id": "fef35a05",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "f72e624f",
+   "id": "940ecf5c",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dc85194",
+   "id": "3a127e4c",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6d4a2e4d",
+   "id": "09ca1d8e",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4284ad02",
+   "id": "0da9e776",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "ccdd8821",
+   "id": "494245df",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c18431aa",
+   "id": "30333b39",
    "metadata": {},
    "source": [
     "# `isdigit` is a *string* method\n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "eb64d25d",
+   "id": "4e61f298",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88d7de5b",
+   "id": "9c30007f",
    "metadata": {},
    "source": [
     "# Full list of methods on strings\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98b440bd",
+   "id": "768245c4",
    "metadata": {},
    "source": [
     "# Controlling our loops\n",
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "593ced22",
+   "id": "5a463fd4",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d49c8e8e",
+   "id": "59317d0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "9913dca3",
+   "id": "d7540002",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97fd5b28",
+   "id": "280c3b92",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits\n",
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "55620121",
+   "id": "4cddb7e0",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eab3134",
+   "id": "ff21bbd6",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits (part 2)\n",
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "cf49c2ae",
+   "id": "dbc125d8",
    "metadata": {
     "scrolled": true
    },
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5a6b5abc",
+   "id": "34f077e6",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6810ee3",
+   "id": "dcb65063",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3709e36d",
+   "id": "f8057d98",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a90ff16b",
+   "id": "33c6e3a5",
    "metadata": {},
    "source": [
     "# Data structure: List\n",
@@ -1370,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "1f2681d6",
+   "id": "4c9d341c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "c63a55af",
+   "id": "88f10bb0",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "10ab8384",
+   "id": "b11fa927",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e2084644",
+   "id": "e8534ea7",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "0fad6d0d",
+   "id": "ba3277b4",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c8534323",
+   "id": "e4b09c81",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "eafefda0",
+   "id": "ae41b439",
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "0f498201",
+   "id": "6a5f75b0",
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "cb6f8279",
+   "id": "20bc2e71",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "bb788bb2",
+   "id": "472fd71c",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "24528e99",
+   "id": "4336d5cf",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "2ed2d685",
+   "id": "92ec23a1",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "1e22eec6",
+   "id": "a1b095df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "ad9b88a6",
+   "id": "ce2a6be9",
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "6c1ca435",
+   "id": "34183de1",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "392aae5b",
+   "id": "08c90267",
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "8a45950a",
+   "id": "85280db2",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "fd266be7",
+   "id": "f72baa26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "7efe136f",
+   "id": "c23ad126",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "89f5dd9e",
+   "id": "b5cc2c63",
    "metadata": {},
    "outputs": [
     {
@@ -1781,7 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "e74fc9c4",
+   "id": "0a100186",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "d5b3cc9e",
+   "id": "dec62aae",
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "479d67bf",
+   "id": "0565c9fd",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (list edition)\n",
@@ -1841,7 +1841,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "29b3fe29",
+   "id": "fc0beab3",
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "096c6fa0",
+   "id": "d99f41ad",
    "metadata": {},
    "outputs": [
     {
@@ -1903,7 +1903,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "8d22a6f9",
+   "id": "5f79c9f7",
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1924,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "548739c7",
+   "id": "09d8ae7d",
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "fbad141c",
+   "id": "75f219c7",
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1977,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "c57f47ec",
+   "id": "16b5b047",
    "metadata": {},
    "outputs": [
     {
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bed72b8e",
+   "id": "d90bd6f0",
    "metadata": {},
    "source": [
     "# Mutable vs. immutable data\n",
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "d2c1d46f",
+   "id": "88a5f02a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2023,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "492943ed",
+   "id": "39268c9a",
    "metadata": {},
    "outputs": [
     {
@@ -2049,7 +2049,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "c3f444f3",
+   "id": "aa84a430",
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "ef470001",
+   "id": "7c6fe8b2",
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "7c2aee77",
+   "id": "c9ab0d00",
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cc6b54a",
+   "id": "9b19464d",
    "metadata": {},
    "source": [
     "# \"Changing\" is a bad term in Python\n",
@@ -2141,7 +2141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e274a0a8",
+   "id": "4382b684",
    "metadata": {},
    "source": [
     "# Exercise: Odds and evens\n",
@@ -2159,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "5e7354cd",
+   "id": "77105767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d094ae1",
+   "id": "f4d50f20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2181,7 +2181,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "a4017bcc",
+   "id": "cf9d7a64",
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7afe07a",
+   "id": "44a83047",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2242,7 +2242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d427605",
+   "id": "d4746d8a",
    "metadata": {},
    "source": [
     "# `break` vs. `continue`\n",
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2cda6d2",
+   "id": "0f115d53",
    "metadata": {},
    "source": [
     "# Splitting\n",
@@ -2272,7 +2272,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "6128ad59",
+   "id": "3eef7630",
    "metadata": {},
    "outputs": [
     {
@@ -2298,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "26d3fc67",
+   "id": "3dcc5d2e",
    "metadata": {},
    "outputs": [
     {
@@ -2321,7 +2321,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "744627b7",
+   "id": "680b934d",
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2346,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "602b6367",
+   "id": "908187a8",
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2407,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "6b194b38",
+   "id": "8216e03c",
    "metadata": {},
    "outputs": [
     {
@@ -2432,7 +2432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aaa1046",
+   "id": "add75614",
    "metadata": {},
    "source": [
     "# Exercise: Odds and evens\n",
@@ -2449,7 +2449,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "f13781bf",
+   "id": "c453853c",
    "metadata": {},
    "outputs": [
     {
@@ -2470,7 +2470,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "beb95e07",
+   "id": "a812fbcd",
    "metadata": {},
    "outputs": [
     {
@@ -2491,7 +2491,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "283ea020",
+   "id": "93165ef2",
    "metadata": {},
    "outputs": [
     {
@@ -2530,9 +2530,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2409dfb0",
+   "metadata": {},
+   "source": [
+    "# From lists to strings with `str.join`\n",
+    "\n",
+    "If you have a list of strings and you want turn it into a single string, you can use `str.join`.\n",
+    "\n",
+    "NOTE that `str.join` is a *string* method, not a list method. You invoke it on the string you want to be connecting each of the list elements.\n",
+    "\n",
+    "In other words, if I say\n",
+    "\n",
+    "    mylist = ['ab', 'cde', 'fg']\n",
+    "    '*'.join(mylist)   # the result is 'ab*cde*fg\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "2dffd7f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ab*cde*fg'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist = ['ab', 'cde', 'fg']\n",
+    "'*'.join(mylist)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96ee6ac9",
+   "id": "32a4b5c7",
    "metadata": {},
    "outputs": [],
    "source": []
